--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "moment": "^2.29.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-icons": "^5.3.0",
+    "react-router": "^7.0.1",
     "react-router-dom": "^6.4.2",
     "react-scripts": "5.0.1",
     "sass": "^1.55.0",
